
######################
#                    #
#      2022.03       #
#                    #
######################
New features and other changes:
1. Fixed an issue that caused Get-RecentUser to not work.
2. Added Open-HomeAssistant function and HomeAssistant config item.

######################
#                    #
#      2022.02       #
#                    #
######################
New features and other changes:
1. Removed print driver copy and installation functions.
2. In Set-RemediationValues added switches to SMB 1 and 2 commands to disable user prompts.
3. Made Install-WSTools multithreaded.
4. Added Splunk to AppNames config value.

######################
#                    #
#      2021.12       #
#                    #
######################
New features and other changes:
1. Added Windows Server 2022 21H2 support to Get-OperatingSystem and Get-HWInfo.
2. Added function Restore-WindowsUpdate.
3. Added numerous app service names to config (used in Stop-AppService.)
4. Added PSCustomObject snippet to powershell.json.
5. Added Enable-ServerManager.
6. Fixed some PSScriptAnalyzer issues.
7. Changed 200+ "new-object -typename PSObject"'s to [PSCustomObject] throughout module and sub-modules. Requires PowerShell v3. Runs faster and provides better functionality.
8. Removed a lot of excess code.
9. Changed minimum required version of PowerShell to version 3. Some functions still work in version 2 but as more functions are converted to newer better capabilities version 2 functionality is going to become more limited.
10. Throughout module and submodules changed "$null -eq $variable -or $variable -eq ''" and some "$null -ne $variable" to [string]::IsNullOrWhiteSpace($variable) as it provides more capabilities.
11. Added function Save-HelpToFile, function Update-HelpFromFile, and HelpFolder config item.