@@ -802,6 +802,50 @@ Function Open-LAPS {
 New-Alias -Name "laps" -Value Open-LAPS
 
 
+function Open-LexmarkManagementConsole {
+<#
+.Notes
+    AUTHOR: Skyler Hart
+    CREATED: 2022-03-08 22:02:21
+    LASTEDIT: 2022-03-08 22:02:21
+.LINK
+    https://wstools.dev
+#>
+    [Diagnostics.CodeAnalysis.SuppressMessageAttribute(
+        "PSAvoidGlobalVars",
+        "",
+        Justification = "Have tried other methods and they do not work consistently."
+    )]
+    [CmdletBinding()]
+    Param (
+        [Parameter(Mandatory=$false)]
+        [Switch]$Chrome,
+
+        [Parameter(Mandatory=$false)]
+        [Switch]$Edge,
+
+        [Parameter(Mandatory=$false)]
+        [Switch]$Firefox,
+
+        [Parameter(Mandatory=$false)]
+        [Switch]$InternetExplorer
+    )
+
+    $config = $Global:WSToolsConfig
+    $URL = $config.LMC
+
+    if ($Chrome) {Start-Process "chrome.exe" $URL}
+    elseif ($Edge) {Start-Process shell:AppsFolder\Microsoft.MicrosoftEdge_8wekyb3d8bbwe!MicrosoftEdge $URL}
+    elseif ($Firefox) {Start-Process "firefox.exe" $URL}
+    elseif ($InternetExplorer) {Start-Process "iexplore.exe" $URL}
+    else {
+        #open in default browser
+        (New-Object -com Shell.Application).Open($URL)
+    }
+}
+New-Alias -Name "Open-LMC" -Value Open-LexmarkManagementConsole
+
+
 function Open-NetLogonLog {
 <#
 .NOTES
@@ -886,6 +930,49 @@ function Open-OWA {
     }
 }
 New-Alias -Name "OWA" -Value Open-OWA
+
+
+function Open-PrintRelease {
+<#
+.Notes
+    AUTHOR: Skyler Hart
+    CREATED: 2022-03-08 22:02:21
+    LASTEDIT: 2022-03-08 22:02:21
+.LINK
+    https://wstools.dev
+#>
+    [Diagnostics.CodeAnalysis.SuppressMessageAttribute(
+        "PSAvoidGlobalVars",
+        "",
+        Justification = "Have tried other methods and they do not work consistently."
+    )]
+    [CmdletBinding()]
+    Param (
+        [Parameter(Mandatory=$false)]
+        [Switch]$Chrome,
+
+        [Parameter(Mandatory=$false)]
+        [Switch]$Edge,
+
+        [Parameter(Mandatory=$false)]
+        [Switch]$Firefox,
+
+        [Parameter(Mandatory=$false)]
+        [Switch]$InternetExplorer
+    )
+
+    $config = $Global:WSToolsConfig
+    $URL = $config.PrintRelease
+
+    if ($Chrome) {Start-Process "chrome.exe" $URL}
+    elseif ($Edge) {Start-Process shell:AppsFolder\Microsoft.MicrosoftEdge_8wekyb3d8bbwe!MicrosoftEdge $URL}
+    elseif ($Firefox) {Start-Process "firefox.exe" $URL}
+    elseif ($InternetExplorer) {Start-Process "iexplore.exe" $URL}
+    else {
+        #open in default browser
+        (New-Object -com Shell.Application).Open($URL)
+    }
+}
 
 
 function Open-SDN {
